// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingPage should match snapshot 1`] = `
<body>
  <div>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-9rcoyi-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1t29gy6-MuiToolbar-root"
      >
        <div
          class="app-logo"
        />
        <div
          class="landing-page-app-bar__right-items"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeSmall css-dnh7b9-MuiSwitch-root"
          >
            <span
              class="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
            />
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-606eve-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
            href="https://github.com/EKarton/RClone-Drive-WebUI"
            tabindex="0"
          >
            View Github
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
          <a
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
            href="/login"
            tabindex="0"
          >
            Login
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </header>
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1t29gy6-MuiToolbar-root"
    />
    <div
      class="intro-section"
    >
      <div
        class="intro-section__left-panel"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 intro-section__title css-gepadz-MuiTypography-root"
        >
          <strong>
            RClone Drive
          </strong>
        </h3>
        <h5
          class="MuiTypography-root MuiTypography-h5 intro-section__subtitle css-ag7rrr-MuiTypography-root"
        >
          A RClone client to view and manage your cloud files on the web.
        </h5>
        <a
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          href="/login"
          tabindex="0"
        >
          Login
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
      <img
        alt="Intro section"
        class="intro-section__image"
        src="files-list-page.png"
      />
    </div>
    <div
      class="highlights-section"
    >
      <div
        class="highlights-section__column"
      >
        <div
          class="highlights-section__header"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-bsqp9w-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
          <h4
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <strong>
              About
            </strong>
          </h4>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          This is a front-facing web application that connects to your RClone instance. You can securely view and manage your files across many cloud providers through this web app.
        </h6>
      </div>
      <div
        class="highlights-section__column"
      >
        <div
          class="highlights-section__header"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeLarge css-1uo3q5b-MuiSvgIcon-root"
            data-testid="SecurityIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"
            />
          </svg>
          <h4
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <strong>
              Secure
            </strong>
          </h4>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          All actions are done locally on your computer. Nothing is done in our backend servers.
        </h6>
      </div>
      <div
        class="highlights-section__column"
      >
        <div
          class="highlights-section__header"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeLarge css-1mhxotf-MuiSvgIcon-root"
            data-testid="MouseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13 1.07V9h7c0-4.08-3.05-7.44-7-7.93zM4 15c0 4.42 3.58 8 8 8s8-3.58 8-8v-4H4v4zm7-13.93C7.05 1.56 4 4.92 4 9h7V1.07z"
            />
          </svg>
          <h4
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <strong>
              Easy to use
            </strong>
          </h4>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Drag-and-drop to upload files, right-click and select to delete, move, or copy files between different cloud providers.
        </h6>
      </div>
    </div>
    <div
      class="feature-section feature-section--right"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            View all pictures
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          View and scroll through all of your pictures
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image"
        src="pictures-list-page.png"
      />
    </div>
    <div
      class="feature-section"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Open and download files
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          View, open, and download PDFs, images, and text documents
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image feature-section__image--left"
        src="pdf-viewer.png"
      />
    </div>
    <div
      class="feature-section feature-section--right"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Upload new files and folders
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Drag-and-drop to upload files and folder to different cloud drives
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image"
        src="file-upload-dialog.png"
      />
    </div>
    <div
      class="feature-section"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Manage files on different cloud drives
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Click to copy, rename, delete, and move files between different cloud drives
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image feature-section__image--left"
        src="move-file-modal.png"
      />
    </div>
    <div
      class="feature-section feature-section--right"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Dark mode
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Ease your eyes with dark theme
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image"
        src="dark-mode.png"
      />
    </div>
  </div>
</body>
`;

exports[`LandingPage should match snapshot when user scrolls down on the page 1`] = `
<body>
  <div>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-1nmcvib-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1t29gy6-MuiToolbar-root"
      >
        <div
          class="app-logo"
        />
        <div
          class="landing-page-app-bar__right-items"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeSmall css-dnh7b9-MuiSwitch-root"
          >
            <span
              class="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
            />
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-606eve-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
            href="https://github.com/EKarton/RClone-Drive-WebUI"
            tabindex="0"
          >
            View Github
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
          <a
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
            href="/login"
            tabindex="0"
          >
            Login
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </header>
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1t29gy6-MuiToolbar-root"
    />
    <div
      class="intro-section"
    >
      <div
        class="intro-section__left-panel"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 intro-section__title css-gepadz-MuiTypography-root"
        >
          <strong>
            RClone Drive
          </strong>
        </h3>
        <h5
          class="MuiTypography-root MuiTypography-h5 intro-section__subtitle css-ag7rrr-MuiTypography-root"
        >
          A RClone client to view and manage your cloud files on the web.
        </h5>
        <a
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          href="/login"
          tabindex="0"
        >
          Login
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
      <img
        alt="Intro section"
        class="intro-section__image"
        src="files-list-page.png"
      />
    </div>
    <div
      class="highlights-section"
    >
      <div
        class="highlights-section__column"
      >
        <div
          class="highlights-section__header"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-bsqp9w-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
          <h4
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <strong>
              About
            </strong>
          </h4>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          This is a front-facing web application that connects to your RClone instance. You can securely view and manage your files across many cloud providers through this web app.
        </h6>
      </div>
      <div
        class="highlights-section__column"
      >
        <div
          class="highlights-section__header"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeLarge css-1uo3q5b-MuiSvgIcon-root"
            data-testid="SecurityIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"
            />
          </svg>
          <h4
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <strong>
              Secure
            </strong>
          </h4>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          All actions are done locally on your computer. Nothing is done in our backend servers.
        </h6>
      </div>
      <div
        class="highlights-section__column"
      >
        <div
          class="highlights-section__header"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeLarge css-1mhxotf-MuiSvgIcon-root"
            data-testid="MouseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13 1.07V9h7c0-4.08-3.05-7.44-7-7.93zM4 15c0 4.42 3.58 8 8 8s8-3.58 8-8v-4H4v4zm7-13.93C7.05 1.56 4 4.92 4 9h7V1.07z"
            />
          </svg>
          <h4
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <strong>
              Easy to use
            </strong>
          </h4>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Drag-and-drop to upload files, right-click and select to delete, move, or copy files between different cloud providers.
        </h6>
      </div>
    </div>
    <div
      class="feature-section feature-section--right"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            View all pictures
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          View and scroll through all of your pictures
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image"
        src="pictures-list-page.png"
      />
    </div>
    <div
      class="feature-section"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Open and download files
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          View, open, and download PDFs, images, and text documents
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image feature-section__image--left"
        src="pdf-viewer.png"
      />
    </div>
    <div
      class="feature-section feature-section--right"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Upload new files and folders
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Drag-and-drop to upload files and folder to different cloud drives
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image"
        src="file-upload-dialog.png"
      />
    </div>
    <div
      class="feature-section"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Manage files on different cloud drives
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Click to copy, rename, delete, and move files between different cloud drives
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image feature-section__image--left"
        src="move-file-modal.png"
      />
    </div>
    <div
      class="feature-section feature-section--right"
    >
      <div
        class="feature-section__text"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
        >
          <strong>
            Dark mode
          </strong>
        </h4>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Ease your eyes with dark theme
        </h6>
      </div>
      <img
        alt="Feature"
        class="feature-section__image"
        src="dark-mode.png"
      />
    </div>
  </div>
</body>
`;
